tests/NormalTests/paczka1/small_fuzzy/31496854.err
Error in line 1: fHND89 A694 74,8
Error in line 2: RzJ0 A694 14,4
Error in line 13: A82 A573 26,8
